--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
         minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
-        versionName "beta"
+        versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
     }
@@ -21,9 +21,6 @@ android {
             resValue("string", "PORT_NUMBER", "8081")
         }
     }
-
-
-
 
 
 }
@@ -142,6 +139,9 @@ dependencies {
 
     //WORK
     implementation "android.arch.work:work-runtime:1.0.1"
+
+    //mail
+    implementation 'com.sun.mail:android-mail:1.5.5'
 
 
     testImplementation 'junit:junit:4.12'
