--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="py.com.ideasweb">
-
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
@@ -26,7 +25,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-
+        <activity android:name=".perseo.ui.activities.EditarFacturaActivity"></activity>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -38,20 +37,15 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
-
-       <!-- <service
+        <!--
+ <service
             android:name=".perseo.work.LocationJobService"
             android:permission="android.permission.BIND_JOB_SERVICE"
-            android:exported="true"/>-->
-
-
+            android:exported="true"/>
+        -->
         <activity
             android:name=".perseo.ui.activities.MapsActivity"
-            android:label="@string/title_activity_maps">
-
-
-        </activity>
-
+            android:label="@string/title_activity_maps"></activity>
         <activity android:name=".perseo.ui.activities.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
